tests/compile_fail/state_macro_empty_variants.rs
fn main() {
    let _ = rrtl::state! {
        BadState: uint(1) {}
    };
}
